--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,37 @@
-<h2>Sign up</h2>
-<div class="container">
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div class="sign-up-wrapper">
+  <div class="container sign-up">
+    <h2>HUBERT</h2>
+    <h3>Start selling your recipes to the world</h3>
+    <p><em>Join us today.</em></p>
 
-  <div class="form-inputs">
-    <%= f.input :first_name, required: true %>
-    <%= f.input :last_name, required: true %>
-    <%= f.input :photo %>
-    <%= f.input :photo_cache, as: :hidden %>
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+
+
+    <%- if devise_mapping.omniauthable? %>
+      <%- resource_class.omniauth_providers.each do |provider| %>
+        <%= link_to omniauth_authorize_path(resource_name, provider) do %>
+          <button class="facebook"><span class="y-icon" data-icon="f"></span><span>Connect with Facebook</span></button>
+        <% end %>
+      <% end -%>
+    <% end -%>
+    <div class="black-form">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
+
+    <div class="form-inputs">
+      <%= f.input :first_name, required: true, label: false, placeholder: "First name", class: 'form-group' %>
+      <%= f.input :last_name, required: true, label: false, placeholder: "Last name" %>
+      <%= f.input :photo, label: false %>
+      <%= f.input :photo_cache, as: :hidden %>
+      <%= f.input :email, required: true, label: false, autofocus: true, placeholder: "Email" %>
+      <%= f.input :password, placeholder: "Password", label: false, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+      <%= f.input :password_confirmation, label: false, required: true, placeholder: "Password" %>
+      </div>
+
+    <div class="form-actions">
+      <%= f.button :submit, "Sign up" %>
+    </div>
+    <% end %>
+    </div>
+    <p id="terms">By clicking connect, you agree to our Terms of Service and Privacy Policy</p>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
