fixed navbar position

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -8,7 +8,10 @@
   padding: 0px 30px;
   align-items: center;
   position: fixed;
+  top: 0px;
   width: 100%;
+  z-index: 200;
+
 }
 
 .single-icon {
