--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <div class="sign-up-wrapper">
   <div class="container sign-up">
+    <div class="col-xs-12-sm-6-md-4-lg-3"></div>
     <h2>HUBERT</h2>
     <h3>Start selling your recipes to the world</h3>
     <p><em>Join us today.</em></p>
