--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,8 +32,8 @@
         </div>
       </div>
     <% else %>
-      <%= link_to "Sign in", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Sign up", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "SIGN IN", new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "SIGN UP", new_user_registration_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
   <!-- Dropdown appearing on mobile only -->
