--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -27,10 +27,13 @@
       <% owner = User.find(@recipe.user_id) %>
       <%= link_to user_path(owner) do %>
         <div class="recipe-avatar">
-
-          <% owner_avatar_url = owner.facebook_picture_url || owner.photo.url(:square) || "http://placehold.it/30x30" %>
-          <%= image_tag owner_avatar_url, class: "avatar"%>
-          <p class="text-center"><%= owner.first_name %> <br> <%= owner.last_name %></p>
+        <% owner_avatar_url = owner.facebook_picture_url || owner.photo.url(:square) || "lmaagvitvvpz5unlrjfm" %>
+        <% if owner.first_name == "administration" %>
+          <%= cl_image_tag "lmaagvitvvpz5unlrjfm", class: "avatar" %>
+        <% else %>
+          <%= image_tag owner_avatar_url, class: "avatar" %>
+        <% end %>
+        <p class="text-center"><%= owner.first_name %> <br> <%= owner.last_name %></p>
         </div>
       <% end %>
     </div>
