--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,37 +1,34 @@
 <div class="sign-up-wrapper">
-  <div class="container sign-up">
-    <div class="col-xs-12-sm-6-md-4-lg-3"></div>
+  <div class="form-container">
     <h2>HUBERT</h2>
-    <h3>Start selling your recipes to the world</h3>
-    <p><em>Join us today.</em></p>
+    <h3>Sell your grandma's recipes to the world</h3>
+    <p><em>And your mamas too</em></p>
 
-
-
-    <%- if devise_mapping.omniauthable? %>
-      <%- resource_class.omniauth_providers.each do |provider| %>
-        <%= link_to omniauth_authorize_path(resource_name, provider) do %>
-          <button class="facebook"><span class="y-icon" data-icon="f"></span><span>Connect with Facebook</span></button>
-        <% end %>
-      <% end -%>
-    <% end -%>
     <div class="black-form">
-    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= f.error_notification %>
+      <%- if devise_mapping.omniauthable? %>
+        <%- resource_class.omniauth_providers.each do |provider| %>
+          <%= link_to omniauth_authorize_path(resource_name, provider) do %>
+            <button class="facebook"><span class="y-icon" data-icon="f"></span><span>Connect with Facebook</span></button>
+          <% end %>
+        <% end -%>
+      <% end -%>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
 
-    <div class="form-inputs">
-      <%= f.input :first_name, required: true, label: false, placeholder: "First name", class: 'form-group' %>
-      <%= f.input :last_name, required: true, label: false, placeholder: "Last name" %>
-      <%= f.input :photo, label: false %>
-      <%= f.input :photo_cache, as: :hidden %>
-      <%= f.input :email, required: true, label: false, autofocus: true, placeholder: "Email" %>
-      <%= f.input :password, placeholder: "Password", label: false, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-      <%= f.input :password_confirmation, label: false, required: true, placeholder: "Password" %>
+      <div class="form-inputs">
+        <%= f.input :first_name, required: true, placeholder: "Gordon", class: 'form-group' %>
+        <%= f.input :last_name, required: true, placeholder: "Ramsay" %>
+        <%= f.input :photo, label: false %>
+        <%= f.input :photo_cache, as: :hidden %>
+        <%= f.input :email, required: true, autofocus: true, placeholder: "gordon.ramsay@arsehole.com" %>
+        <%= f.input :password, placeholder: "Password", required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+        <%= f.input :password_confirmation, required: true, placeholder: "Password" %>
+        </div>
+
+      <div class="form-actions">
+        <%= f.button :submit, "Sign up", class: "sign-up-btn text-center" %>
       </div>
-
-    <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
-    </div>
-    <% end %>
+      <% end %>
     </div>
     <p id="terms">By clicking connect, you agree to our Terms of Service and Privacy Policy</p>
   </div>
