--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -12,7 +12,7 @@
   </div>
   <% owner = User.find(recipe.user_id) %>
   <% avatar_url = owner.facebook_picture_url || owner.photo.url(:square) || "lmaagvitvvpz5unlrjfm" %>
-  <% if owner.first_name == "administration" %>
+  <% if owner.last_name == "OSS 117" %>
     <%= cl_image_tag "lmaagvitvvpz5unlrjfm", class: "card-user avatar-bordered" %>
   <% else %>
     <%= cl_image_tag avatar_url, class: "card-user avatar-bordered" %>
