--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="sign-up-wrapper">
+<div class="form-wrapper">
   <div class="form-container">
     <h2>HUBERT</h2>
     <h3>Sell your grandma's recipes to the world</h3>
