Simple footer design

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -32,6 +32,7 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #484848;
 
+$darkest-grey: #1F262A;
 $darker-grey: #484848;
 $dark-grey: #767676;
 $light-grey: #EFF5FF;
