--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -9,99 +9,60 @@
   display: block;
 }
 .footer {
-  box-shadow: 5px 1px 0px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: $lighter-blue;
-  height: auto;
+  background: $darkest-grey;
+  height: 200px;
   position: relative;
   width: 100%;
-  border-bottom: 2px solid $light-grey;
-  border-top: 1px solid $light-grey;
+  display: flex;
+  justify-content: center;
+  font-family: Raleway,Roboto,Helvetica Neue,Segoe UI,sans-serif;
+  font-weight: bolder;
+  color: white;
 }
-.footer p {
-  margin: 0;
-}
-.footer img {
-  max-width: 100%;
-}
-.footer h3 {
-  border-bottom: 1px solid $dark-grey;
-  color: $darker-grey;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 27px;
-  padding: 20px 0 10px;
-  text-transform: uppercase;
-}
-.footer ul {
-  font-size: 13px;
-  list-style-type: none;
-  margin-left: 0;
-  padding-left: 0;
-  margin-top: 15px;
-  color: #7F8C8D;
-}
-.footer ul li a {
-  padding: 0 0 5px 0;
-  display: block;
-}
-.footer a {
-  color: $darker-grey;
-  text-decoration: none;
 
+.footer-menu {
+  padding-top: 20px;
+  width: 70%;
 }
-.supportLi h4 {
-  font-size: 20px;
-  font-weight: lighter;
-  line-height: normal;
-  margin-bottom: 0 !important;
-  padding-bottom: 0;
+
+.footer-first-row {
+  display: flex;
+  justify-content: space-around;
 }
-.bg-gray {
-  background-image: -moz-linear-gradient(center bottom, #BBBBBB 0%, #F0F0F0 100%);
-  box-shadow: 0 1px 0 #B4B3B3;
+
+.footer-second-row {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  font-size: 30px;
 }
-.social li {
-  background: none repeat scroll 0 0 white;
-  border: 2px solid $dark-grey;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -o-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
-  float: left;
-  height: 36px;
-  line-height: 36px;
-  margin: 0 8px 0 0;
-  padding: 0;
-  text-align: center;
-  width: 36px;
-  transition: all 0.5s ease 0s;
-  -moz-transition: all 0.5s ease 0s;
-  -webkit-transition: all 0.5s ease 0s;
-  -ms-transition: all 0.5s ease 0s;
-  -o-transition: all 0.5s ease 0s;
+
+.fa-facebook-square {
+  padding: 0px 20px;
 }
-.social li a {
+
+.fa-facebook-square:hover {
   color: $red;
 }
-.social li:hover {
-  border: 2px solid $brand-color;
-  background: white;
+
+.fa-twitter-square {
+  padding: 0px 20px;
 }
-.social li a i {
-  font-size: 16px;
-  margin: 0 0 0 5px;
-  color: $brand-color !important;
+
+.fa-twitter-square:hover {
+  color: $red;
 }
-.footer-bottom {
-  background: #E3E3E3;
-  border-top: 1px solid #DDDDDD;
-  padding-top: 10px;
-  padding-bottom: 10px;
+
+.fa-google-plus-square {
+  padding: 0px 20px;
 }
-.footer-bottom p.pull-left {
-  padding-top: 6px;
+
+.fa-google-plus-square:hover {
+  color: $red;
 }
-.payments {
-  font-size: 1.5em;
+
+.footer-third-row {
+  display: flex;
+  justify-content: center;
 }
+
