--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,22 +1,21 @@
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <footer>
     <div class="footer" id="footer">
-        <div class="container">
-            <div class="row">
-              <div class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-                  <h3> About </h3>
-                  <ul>
-                      <li> <a href="#"> History </a> </li>
-                      <li> <a href="#"> Staff </a> </li>
-                  </ul>
-              </div>
-              <div class="col-xs-6 col-sm-4 col-md-2 col-lg-2">
-                <h3> Contact Us </h3>
-                <ul class="social">
-                    <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
-                    <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-                </ul>
-              </div>
+        <div class="container footer-menu">
+          <div class="footer-first-row">
+            <p>ABOUT US</p>
+            <p>CONTACT</p>
+            <p>PRESS</p>
+            <p>JOBS</p>
+          </div>
+          <div class="footer-second-row">
+            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+                <i class="fa fa-twitter-square" aria-hidden="true"></i>
+                <i class="fa fa-google-plus-square" aria-hidden="true"></i>
+          </div>
+          <div class="footer-third-row">
+            <h2>HUBERT</h2>
+          </div>
         </div>
     </div>
 </footer>
