--- a/app/views/recipes/_recipe-form.html.erb
+++ b/app/views/recipes/_recipe-form.html.erb
@@ -7,7 +7,7 @@
   <%= f.input :cooking_time, hint: "cooking time (minutes)" , required: true%>
   <%= f.input :description, hint: "tell us where its from, the story behind" , required: true%>
   <%= f.input :instructions, hint: "tell us how to do it step by step" , required: true%>
-  <%= f.input :difficulty, hint: "tell us how difficlt it is", required: true, collection: ["Very Easy", "Easy", "Medium", "Hard", "Very Hard"], as: :radio_buttons %>
+  <%= f.input :difficulty, hint: "tell us how difficlt it is", required: true, collection: ["Very Easy", "Easy", "Medium", "Hard", "Very Hard"], as: :radio_buttons, :checked => "Medium" %>
   <%= f.input :cuisine_type, hint: "french, italian, else", required: true, collection: ["American", "British", "Caribbean", "Chinese", "French", "Greek", "Indian", "Italian", "Japanese", "Mediterranean", "Mexican", "Moroccan", "Spanish", "Thai", "Turkish", "Vietnamese"]%>
   <%= f.button :submit %>
 <% end %>
