--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,8 +1,8 @@
 <div class="form-wrapper">
-  <div class="form-container">
+  <div class="form-container create-recipe-form">
     <h2>Create a new recipe</h2>
     <p><em>And start selling it right away</em></p>
-    <div class="black-form">
+    <div class="create-recipe">
       <%= render 'recipe-form' %>
     </div>
     <p id="terms">We'll get your recipe up right away!</p>
