change the design of the modal for the review (transaction) and add a collection dropdown for the rating

--- a/app/views/transactions/_edit_form.html.erb
+++ b/app/views/transactions/_edit_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for([ recipe, transaction ]) do |f| %>
   <%= f.input :comment %>
-  <%= f.input :rating %>
-  <%= f.button :submit, value: "Leave a review"%>
+  <%= f.input :rating , collection: [1,2,3,4,5] %>
+  <%= f.button :submit, value: "Leave my review", class: "btn btn-warning btn-lg"%>
 <% end %>
