--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -64,13 +64,10 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="formLabel">Modal title</h4>
+                <h4 class="modal-title" id="formLabel">Leave a review</h4>
               </div>
               <div class="modal-body">
                 <%= render 'transactions/edit_form', recipe: @recipe, transaction: @transaction %>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
