CSS on recipe template page

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -36,6 +36,7 @@ $darkest-grey: #1F262A;
 $darker-grey: #484848;
 $dark-grey: #767676;
 $light-grey: #EFF5FF;
+$off-white: #f3f3f3;
 $blue: #91B5C9;
 $light-blue: #D2E1F2;
 $lighter-blue: #E7F0FF;
