--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -13,66 +13,53 @@
   left: 20px;
   color: white;
 }
-.fa-heart-o {
-  font-size: 40px;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-}
-.fa-heart-o:hover {
-  font-size: 40px;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  color: $red;
-}
-.fa-chevron-left {
-  font-size: 30px;
-  position: absolute;
-  left: 20px;
-  bottom: 135px;
-}
-.fa-chevron-left:hover {
-  font-size: 30px;
-  position: absolute;
-  left: 20px;
-  bottom: 135px;
-  color: $red;
-}
-.fa-chevron-right {
-  font-size: 30px;
-  position: absolute;
-  right: 20px;
-  bottom: 135px;
-}
-.fa-chevron-right:hover {
-  font-size: 30px;
-  position: absolute;
-  right: 20px;
-  bottom: 135px;
-  color: $red;
+
+.bought-by {
+  background-color: $red;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  text-align: center;
+  margin: auto;
+  font-size: 50px;
+  font-weight: bolder;
+  color: white;
+  padding-top: 10px;
 }
 
-
+.fa-star {
+  color: $yellow;
+}
 
 .recipe-avatar .avatar {
-  width: 100px;
+  width: 80px;
   border-radius: 50%;
-  border: 5px solid white;
-  background-color: grey;
+}
+
+.user-name {
+  font-family: Raleway,Roboto,Helvetica Neue,Segoe UI,sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  color: black;
+  text-decoration: none;
 }
 
 .flex-recipe-details {
+  padding-top: 20px;
   display: flex;
-  justify-content: space-between;
-  border-bottom: 0.5px solid grey;
-  padding: 20px;
+  justify-content: space-around;
+  background-color: $off-white;
+  text-align: center;
+  align-items: center;
+}
+
+.flex-recipe-details h3 {
+  color: black;
 }
 
 .cooking-details {
   font-size: 40px;
 }
-
 
 .container-recipe-page {
   width: 70%;
@@ -80,18 +67,44 @@
 }
 
 .recipe-description {
-  padding-top: 30px;
+  padding: 30px;
+  font-size: 25px;
+  color: black;
 }
 
 .recipe-instructions {
-  border-bottom: 0.5px solid grey;
   padding: 20px;
-  text-align: center;
+  text-align: justify;
+  color: $darker-grey;
+  font-size: 19px;
+  line-height: 2;
+  h2 {
+    text-align: center;
+  }
+}
+
+.number-bought {
+  display: flex;
+  justify-content: center;
+  margin-right: 10px;
+  h3 {
+  font-family: Raleway,Roboto,Helvetica Neue,Segoe UI,sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  color: black;
+  text-decoration: none;
+  margin-top: 30px;
+  margin-right: 5px;
+  margin-left: 7px;
+  }
 }
 
 .recipe-reviews {
   padding: 20px;
   text-align: center;
+  background-color: $off-white;
+  margin-bottom: 0px;
+  color: $darker-grey;
 }
 
 
