--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -17,6 +17,10 @@
   padding-top: 50px;
   min-height: 100vh;
 }
+
+.wrapper-padded {
+  padding-top: 100px;
+}
 // Backgrounds
 .bg-black {
   background: #4a4a4a;
