--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,5 @@
+<%= render "shared/filter" %>
 <div class="container-fluid padded-bottom recipe-index-container">
-<h1 class="text-center">All recipes</h1>
   <div class="row">
     <% @recipes.each do |recipe|%>
     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 recipe-cards">
